# mvMAPIT

./: .Rbuildignore  .gitignore  404.html  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  DESCRIPTION  Dockerfile  LICENSE.html  NAMESPACE  NEWS.md  README.md  README.rst  _pkgdown.yml  authors.html  cleanup  configure  configure.ac  index.html  oscar-tasks.py  oscar.Jenkinsfile  pkgdown.yml  repeated_trials.R  sbatch-submit.sh  script.R  sitemap.xml  slurm-job.sh
.github/: CODEOWNERS
R/: MAPIT.R  RcppExports.R  binary_to_liability.R  catch-routine-registration.R  combine_pvalues.R  globals.R  mapit_analysis_data.R  mapit_pvalues.R  mvmapit_data.R  phillips_data.R  random_genotype_matrix.R  simulate.R  simulate_data.R  simulated_data.R  simulated_epistasis_data.R  simulated_pleiotropic_epistasis_data.R
articles/: docker-mvmapit.html  index.html  mvMAPIT.html  simulations.html  study-compare-p-value-combine-methods.html  study-phillips-bnabs.html  study-wtccc-mice.html  tutorial-docker-mvmapit.html  tutorial-lt-mapit.html  tutorial-simulations.html
data/: mapit_analysis_data.rda  mvmapit_data.rda  phillips_data.rda  simulated_epistasis_data.rda  simulated_pleiotropic_epistasis_data.rda
data-raw/: genotype_data.R  mapit_on_simulated_data.R  mapit_sim.R  mvMAPIT_Sim.R  mvmapit_on_simulated_data.R  random_data.R  simulate_epistasis.R  simulate_multiple_phenotypes.R
docs/: bookdown.rst  conf.py  index.rst  mvmapit.rst
man/: MAPIT.Rd  MvMAPIT.Rd  binary_to_liability.Rd  cauchy_combined.Rd  davies_exact.Rd  fishers_combined.Rd  harmonic_combined.Rd  mapit_analysis_data.Rd  mvmapit.Rd  mvmapit_data.Rd  phillips_data.Rd  random_genotype_matrix.Rd  simulate.Rd  simulate_phenotypes.Rd  simulate_traits.Rd  simulated_data.Rd  simulated_epistasis_data.Rd  simulated_pleiotropic_epistasis_data.Rd
news/: index.html
oscar/: empirical_false_positives.R  epistasis_data.R  epistasis_data_array_hybrid.R  epistasis_data_array_normal.R  install-from-source.sh  null_data.R  null_data_array_davies.R  null_data_array_normal.R  qqplot.R  qqplot_covariance.R  run-R-script.sh  sbatch-submit-array.sh  sbatch-submit.sh  slurm-job-array.sh  slurm-job.sh
reference/: binary_to_liability.html  index.html  (+8 more)
(+111 files in other folders)
